# nacho

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy-endpoints.md  tailwind.config.cjs  vite.config.ts
releases/macos/Nacho Time.app/Contents/: Info.plist
releases/macos/Nacho Time.app/Contents/Resources/: icon.icns
src/: global.css  index.tsx  media-chrome.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  file_server.rs  lib.rs  main.rs  settings_manager.rs  tmdb.rs  torrent_db.rs  torrent_search.rs  torrent_server.rs  transmux.rs  watch_history.rs
src/components/: ContinueWatchingCarousel.tsx  CustomAlert.tsx  DownloadProgressPopup.tsx  Header.tsx  MovieCarousel.tsx  MovieDetails.tsx  PluginButton.tsx  ProfileButton.tsx  SeriesCarousel.tsx  SeriesDetails.tsx
src/examples/: torrent-db-usage.ts
src/lib/: nachoAuth.ts  tmdb.ts  torrentDb.ts  userHistoryStore.ts
src/pages/: AddTorrent.tsx  Downloads.tsx  DropTorrent.tsx  Home.tsx  MediaLibrary.tsx  Movies.tsx  Player.tsx  Search.tsx  Series.tsx  Settings.tsx  UserLogin.tsx
src/types/: settings.ts  tmdb.ts  torrent.ts  trakt.ts
